--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:41:49 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:42:32 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -204,22 +204,6 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Albert Selina</td>
-      <td class="bigbold">-13</td>
-      <td>Scottie Scheffler -8
-Not started</td>
-      <td>Corey Conners -2
--1 thru 2</td>
-      <td>Will Zalatoris -2
--1 thru 2</td>
-      <td>Webb Simpson -1
--2 thru 6</td>
-      <td class="greyout leftborder">Jon Rahm(W) +4
-+2 thru 9</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Mark MacKave</td>
       <td class="bigbold">-13</td>
       <td>Scottie Scheffler -8
@@ -233,6 +217,22 @@ Not started</td>
       <td class="greyout leftborder">Viktor Hovland +3
 -1 (F)</td>
       <td class="greyout">Xander Schauffele(W)
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Albert Selina</td>
+      <td class="bigbold">-12</td>
+      <td>Scottie Scheffler -8
+Not started</td>
+      <td>Corey Conners -2
+-1 thru 2</td>
+      <td>Will Zalatoris -2
+-1 thru 2</td>
+      <td>Webb Simpson E
+-1 thru 7</td>
+      <td class="greyout leftborder">Jon Rahm(W) +4
++2 thru 9</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -540,6 +540,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">-5</td>
+      <td>Justin Thomas -3
+-2 thru 4</td>
+      <td>Collin Morikawa -2
+-1 thru 3</td>
+      <td>Will Zalatoris -2
+-1 thru 2</td>
+      <td>Rory McIlroy +2
+E thru 10</td>
+      <td class="greyout leftborder">Tiger Woods(W) +3
++2 thru 7</td>
+      <td class="greyout">Viktor Hovland +3
+-1 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jabby</td>
       <td class="bigbold">-5</td>
       <td>Justin Thomas(W) -3
@@ -554,22 +570,6 @@ E thru 10</td>
 +2 thru 9</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">-4</td>
-      <td>Justin Thomas -3
--2 thru 4</td>
-      <td>Will Zalatoris -2
--1 thru 2</td>
-      <td>Collin Morikawa -1
-E thru 2</td>
-      <td>Rory McIlroy +2
-E thru 10</td>
-      <td class="greyout leftborder">Tiger Woods(W) +3
-+2 thru 7</td>
-      <td class="greyout">Viktor Hovland +3
--1 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunrises</td>
@@ -604,6 +604,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Grace</td>
+      <td class="bigbold">-2</td>
+      <td>Corey Conners -2
+-1 thru 2</td>
+      <td>Collin Morikawa -2
+-1 thru 3</td>
+      <td>Will Zalatoris -2
+-1 thru 2</td>
+      <td>Rory McIlroy +2
+E thru 10</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout">Xander Schauffele(W)
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
       <td class="bigbold">-2</td>
       <td>Shane Lowry -3
@@ -617,22 +633,6 @@ E thru 1</td>
       <td class="greyout leftborder">Louis Oosthuizen
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Grace</td>
-      <td class="bigbold">-1</td>
-      <td>Corey Conners -2
--1 thru 2</td>
-      <td>Will Zalatoris -2
--1 thru 2</td>
-      <td>Collin Morikawa -1
-E thru 2</td>
-      <td>Rory McIlroy +2
-E thru 10</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
     </tr>
     <tr>
@@ -653,11 +653,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">0</td>
       <td>Justin Thomas -3
 -2 thru 4</td>
-      <td>Collin Morikawa(W) -1
-E thru 2</td>
+      <td>Collin Morikawa(W) -2
+-1 thru 3</td>
       <td>Rory McIlroy +2
 E thru 10</td>
       <td>Viktor Hovland +3
@@ -665,6 +665,38 @@ E thru 10</td>
       <td class="greyout leftborder">Tiger Woods +3
 +2 thru 7</td>
       <td class="greyout">Gary Woodland
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Walk 1</td>
+      <td class="bigbold">1</td>
+      <td>Collin Morikawa -2
+-1 thru 3</td>
+      <td>Will Zalatoris -2
+-1 thru 2</td>
+      <td>Patrick Cantlay +2
++1 thru 6</td>
+      <td>Viktor Hovland(W) +3
+-1 (F)</td>
+      <td class="greyout leftborder">Jon Rahm +4
++2 thru 9</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Hosegood</td>
+      <td class="bigbold">1</td>
+      <td>Hideki Matsuyama -3
+Not started</td>
+      <td>Collin Morikawa(W) -2
+-1 thru 3</td>
+      <td>Patrick Cantlay +2
++1 thru 6</td>
+      <td>Jon Rahm +4
++2 thru 9</td>
+      <td class="greyout leftborder">Paul Casey
+Out With Injury</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -700,22 +732,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Walk 1</td>
-      <td class="bigbold">2</td>
-      <td>Will Zalatoris -2
--1 thru 2</td>
-      <td>Collin Morikawa -1
-E thru 2</td>
-      <td>Patrick Cantlay +2
-+1 thru 6</td>
-      <td>Viktor Hovland(W) +3
--1 (F)</td>
-      <td class="greyout leftborder">Jon Rahm +4
-+2 thru 9</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Don Shaw</td>
       <td class="bigbold">2</td>
       <td>Cameron Smith -3
@@ -729,22 +745,6 @@ Missed Cut</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">2</td>
-      <td>Hideki Matsuyama -3
-Not started</td>
-      <td>Collin Morikawa(W) -1
-E thru 2</td>
-      <td>Patrick Cantlay +2
-+1 thru 6</td>
-      <td>Jon Rahm +4
-+2 thru 9</td>
-      <td class="greyout leftborder">Paul Casey
-Out With Injury</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -780,6 +780,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">4</td>
+      <td>Corey Conners(W) -2
+-1 thru 2</td>
+      <td>Collin Morikawa -2
+-1 thru 3</td>
+      <td>Robert MacIntyre +4
++2 thru 8</td>
+      <td>Jon Rahm +4
++2 thru 9</td>
+      <td class="greyout leftborder">Daniel Berger +5
++3 thru 12</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Lorette Hosegood</td>
       <td class="bigbold">5</td>
       <td>Dustin Johnson -2
@@ -792,22 +808,6 @@ E thru 10</td>
 -1 (F)</td>
       <td class="greyout leftborder">Jon Rahm +4
 +2 thru 9</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">5</td>
-      <td>Corey Conners(W) -2
--1 thru 2</td>
-      <td>Collin Morikawa -1
-E thru 2</td>
-      <td>Robert MacIntyre +4
-+2 thru 8</td>
-      <td>Jon Rahm +4
-+2 thru 9</td>
-      <td class="greyout leftborder">Daniel Berger +5
-+3 thru 12</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -877,15 +877,31 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">9</td>
-      <td>Collin Morikawa -1
-E thru 2</td>
+      <td class="bigbold">8</td>
+      <td>Collin Morikawa -2
+-1 thru 3</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
       <td>Patrick Reed +3
 E thru 13</td>
       <td>Jon Rahm +4
 +2 thru 9</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">8</td>
+      <td>Collin Morikawa -2
+-1 thru 3</td>
+      <td>Patrick Cantlay +2
++1 thru 6</td>
+      <td>Jon Rahm(W) +4
++2 thru 9</td>
+      <td>Tony Finau +4
++2 thru 12</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -905,22 +921,6 @@ E thru 1</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">9</td>
-      <td>Collin Morikawa -1
-E thru 2</td>
-      <td>Patrick Cantlay +2
-+1 thru 6</td>
-      <td>Jon Rahm(W) +4
-+2 thru 9</td>
-      <td>Tony Finau +4
-+2 thru 12</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
