--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:43:15 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:43:58 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -150,8 +150,8 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris -1
 E thru 3</td>
-      <td class="greyout leftborder">Patrick Cantlay +2
-+1 thru 6</td>
+      <td class="greyout leftborder">Patrick Cantlay +3
++2 thru 7</td>
       <td class="greyout">Tony Finau +5
 +3 thru 13</td>
     </tr>
@@ -188,38 +188,6 @@ E thru 3</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-6</td>
-      <td>Justin Thomas(W) -3
--2 thru 4</td>
-      <td>Shane Lowry -3
-Not started</td>
-      <td>Corey Conners -2
--1 thru 2</td>
-      <td>Patrick Cantlay +2
-+1 thru 6</td>
-      <td class="greyout leftborder">Jon Rahm +4
-+2 thru 9</td>
-      <td class="greyout">Tyrrell Hatton +4
-+2 thru 9</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-6</td>
-      <td>Justin Thomas -3
--2 thru 4</td>
-      <td>Sungjae Im -3
-Not started</td>
-      <td>Collin Morikawa -2
--1 thru 3</td>
-      <td>Patrick Cantlay +2
-+1 thru 6</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +3
--1 (F)</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-6</td>
       <td>Justin Thomas -3
@@ -234,6 +202,38 @@ E thru 3</td>
 E thru 10</td>
       <td class="greyout">Viktor Hovland +3
 -1 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Derrick Shea</td>
+      <td class="bigbold">-5</td>
+      <td>Justin Thomas(W) -3
+-2 thru 4</td>
+      <td>Shane Lowry -3
+Not started</td>
+      <td>Corey Conners -2
+-1 thru 2</td>
+      <td>Patrick Cantlay +3
++2 thru 7</td>
+      <td class="greyout leftborder">Jon Rahm +4
++2 thru 9</td>
+      <td class="greyout">Tyrrell Hatton +4
++2 thru 9</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Scott Williamson</td>
+      <td class="bigbold">-5</td>
+      <td>Justin Thomas -3
+-2 thru 4</td>
+      <td>Sungjae Im -3
+Not started</td>
+      <td>Collin Morikawa -2
+-1 thru 3</td>
+      <td>Viktor Hovland(W) +3
+-1 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +3
++2 thru 7</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -269,15 +269,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">0</td>
       <td>Cameron Smith(W) -3
 -1 thru 2</td>
       <td>Collin Morikawa -2
 -1 thru 3</td>
       <td>Rory McIlroy +2
 E thru 10</td>
-      <td>Patrick Cantlay +2
-+1 thru 6</td>
+      <td>Patrick Cantlay +3
++2 thru 7</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -333,11 +333,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">9</td>
+      <td class="bigbold">10</td>
       <td>Collin Morikawa -2
 -1 thru 3</td>
-      <td>Patrick Cantlay +2
-+1 thru 6</td>
+      <td>Patrick Cantlay +3
++2 thru 7</td>
       <td>Jon Rahm(W) +4
 +2 thru 9</td>
       <td>Tony Finau +5
@@ -349,11 +349,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">9</td>
+      <td class="bigbold">10</td>
       <td>Dustin Johnson -2
 E thru 1</td>
-      <td>Patrick Cantlay +2
-+1 thru 6</td>
+      <td>Patrick Cantlay +3
++2 thru 7</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Jon Rahm +4
