--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:43:58 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:44:41 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -572,22 +572,6 @@ E thru 3</td>
 +2 thru 9</td>
     </tr>
     <tr>
-      <td class="bigbold">Low Golf IQ</td>
-      <td class="bigbold">-3</td>
-      <td>Shane Lowry(W) -3
-Not started</td>
-      <td>Corey Conners -2
--1 thru 2</td>
-      <td>Joaquin Niemann -1
-E thru 3</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Brian Harman
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Santorini Sunrises</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith -3
@@ -601,6 +585,22 @@ E thru 3</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">-2</td>
+      <td>Shane Lowry(W) -3
+Not started</td>
+      <td>Corey Conners -2
+-1 thru 2</td>
+      <td>Joaquin Niemann E
++1 thru 4</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Brian Harman
 Missed Cut</td>
     </tr>
     <tr>
