--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:43:58 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:44:41 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -188,22 +188,6 @@ E thru 3</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-6</td>
-      <td>Justin Thomas -3
--2 thru 4</td>
-      <td>Cameron Smith -3
--1 thru 2</td>
-      <td>Joaquin Niemann -1
-E thru 3</td>
-      <td>Tommy Fleetwood(W) +1
--2 thru 15</td>
-      <td class="greyout leftborder">Rory McIlroy +2
-E thru 10</td>
-      <td class="greyout">Viktor Hovland +3
--1 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">-5</td>
       <td>Justin Thomas(W) -3
@@ -234,6 +218,22 @@ Not started</td>
 +2 thru 7</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">-5</td>
+      <td>Justin Thomas -3
+-2 thru 4</td>
+      <td>Cameron Smith -3
+-1 thru 2</td>
+      <td>Joaquin Niemann E
++1 thru 4</td>
+      <td>Tommy Fleetwood(W) +1
+-2 thru 15</td>
+      <td class="greyout leftborder">Rory McIlroy +2
+E thru 10</td>
+      <td class="greyout">Viktor Hovland +3
+-1 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
