--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:05:31 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:06:14 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -486,8 +486,8 @@ E thru 4</td>
 -1 thru 6</td>
       <td>Rory McIlroy(W) +3
 +1 thru 12</td>
-      <td class="greyout leftborder">Tiger Woods +3
-+2 thru 8</td>
+      <td class="greyout leftborder">Tiger Woods +4
++3 thru 9</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -580,12 +580,12 @@ Missed Cut</td>
 E thru 4</td>
       <td>Will Zalatoris -1
 E thru 4</td>
-      <td>Tiger Woods(W) +3
-+2 thru 8</td>
-      <td class="greyout leftborder">Viktor Hovland +3
+      <td>Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout">Rory McIlroy +3
+      <td class="greyout leftborder">Rory McIlroy +3
 +1 thru 12</td>
+      <td class="greyout">Tiger Woods(W) +4
++3 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
@@ -652,22 +652,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">3</td>
-      <td>Corey Conners -2
--1 thru 4</td>
-      <td>Cameron Smith -2
-E thru 4</td>
-      <td>Tiger Woods +3
-+2 thru 8</td>
-      <td>Jon Rahm(W) +4
-+2 thru 11</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Roy Jeffrey A</td>
       <td class="bigbold">3</td>
       <td>Hideki Matsuyama -2
@@ -694,8 +678,8 @@ E thru 4</td>
 -1 (F)</td>
       <td>Rory McIlroy +3
 +1 thru 12</td>
-      <td class="greyout leftborder">Tiger Woods +3
-+2 thru 8</td>
+      <td class="greyout leftborder">Tiger Woods +4
++3 thru 9</td>
       <td class="greyout">Gary Woodland
 Missed Cut</td>
     </tr>
@@ -728,6 +712,22 @@ E thru 4</td>
 +2 thru 8</td>
       <td class="greyout leftborder">Jon Rahm +4
 +2 thru 11</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Don Shaw</td>
+      <td class="bigbold">4</td>
+      <td>Corey Conners -2
+-1 thru 4</td>
+      <td>Cameron Smith -2
+E thru 4</td>
+      <td>Jon Rahm(W) +4
++2 thru 11</td>
+      <td>Tiger Woods +4
++3 thru 9</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
