--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:08:23 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:09:06 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -199,7 +199,7 @@ E thru 4</td>
       <td>Will Zalatoris -2
 -1 thru 5</td>
       <td class="greyout leftborder">Russell Henley +6
-+3 thru 15</td>
++3 thru 16</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -326,8 +326,8 @@ E thru 1</td>
 E thru 4</td>
       <td>Will Zalatoris -2
 -1 thru 5</td>
-      <td class="greyout leftborder">Matthew Fitzpatrick +1
-+1 thru 7</td>
+      <td class="greyout leftborder">Matthew Fitzpatrick E
+E thru 8</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -364,6 +364,22 @@ E thru 4</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">The Dub</td>
+      <td class="bigbold">-7</td>
+      <td>Scottie Scheffler -8
+E thru 1</td>
+      <td>Cameron Smith(W) -2
+E thru 4</td>
+      <td>Matthew Fitzpatrick E
+E thru 8</td>
+      <td>Patrick Cantlay +3
++2 thru 8</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Roy Jeffrey B</td>
       <td class="bigbold">-6</td>
       <td>Scottie Scheffler(W) -8
@@ -378,22 +394,6 @@ E thru 1</td>
 +2 thru 9</td>
       <td class="greyout">Jon Rahm +4
 +2 thru 11</td>
-    </tr>
-    <tr>
-      <td class="bigbold">The Dub</td>
-      <td class="bigbold">-6</td>
-      <td>Scottie Scheffler -8
-E thru 1</td>
-      <td>Cameron Smith(W) -2
-E thru 4</td>
-      <td>Matthew Fitzpatrick +1
-+1 thru 7</td>
-      <td>Patrick Cantlay +3
-+2 thru 8</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Ron Harrington</td>
@@ -588,6 +588,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">-1</td>
+      <td>Dustin Johnson(W) -3
+-1 thru 3</td>
+      <td>Shane Lowry -3
+E thru 1</td>
+      <td>Matthew Fitzpatrick E
+E thru 8</td>
+      <td>Tony Finau +5
++3 thru 14</td>
+      <td class="greyout leftborder">Louis Oosthuizen
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Low Golf IQ</td>
       <td class="bigbold">-1</td>
       <td>Shane Lowry(W) -3
@@ -617,22 +633,6 @@ E thru 4</td>
       <td class="greyout leftborder">Rory McIlroy +3
 +1 thru 12</td>
       <td class="greyout">Xander Schauffele(W)
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">0</td>
-      <td>Dustin Johnson(W) -3
--1 thru 3</td>
-      <td>Shane Lowry -3
-E thru 1</td>
-      <td>Matthew Fitzpatrick +1
-+1 thru 7</td>
-      <td>Tony Finau +5
-+3 thru 14</td>
-      <td class="greyout leftborder">Louis Oosthuizen
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
