--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:08:23 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:09:06 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -182,8 +182,8 @@ E thru 1</td>
 E thru 4</td>
       <td>Will Zalatoris -2
 -1 thru 5</td>
-      <td class="greyout leftborder">Matthew Fitzpatrick +1
-+1 thru 7</td>
+      <td class="greyout leftborder">Matthew Fitzpatrick E
+E thru 8</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -277,7 +277,7 @@ Missed Cut</td>
       <td>Corey Conners -2
 -1 thru 4</td>
       <td>Russell Henley +6
-+3 thru 15</td>
++3 thru 16</td>
       <td class="greyout leftborder">Xander Schauffele(W)
 Missed Cut</td>
       <td class="greyout">Louis Oosthuizen
