--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:09:49 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:10:32 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -572,6 +572,22 @@ E thru 4</td>
 +3 thru 9</td>
     </tr>
     <tr>
+      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">-2</td>
+      <td>Shane Lowry(W) -3
+E thru 1</td>
+      <td>Corey Conners -2
+-1 thru 4</td>
+      <td>Joaquin Niemann E
++1 thru 6</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Brian Harman
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Uphill into the Wind</td>
       <td class="bigbold">-1</td>
       <td>Scottie Scheffler(W) -8
@@ -601,22 +617,6 @@ E thru 8</td>
       <td class="greyout leftborder">Louis Oosthuizen
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Low Golf IQ</td>
-      <td class="bigbold">-1</td>
-      <td>Shane Lowry(W) -3
-E thru 1</td>
-      <td>Corey Conners -2
--1 thru 4</td>
-      <td>Joaquin Niemann +1
-+2 thru 5</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Brian Harman
 Missed Cut</td>
     </tr>
     <tr>
@@ -876,22 +876,6 @@ E thru 4</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">9</td>
-      <td>Collin Morikawa -1
-E thru 4</td>
-      <td>Viktor Hovland(W) +3
--1 (F)</td>
-      <td>Patrick Reed +3
-E thru 15</td>
-      <td>Jon Rahm +4
-+2 thru 11</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">9</td>
       <td>Dustin Johnson -3
@@ -905,6 +889,22 @@ Missed Cut</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">10</td>
+      <td>Collin Morikawa -1
+E thru 4</td>
+      <td>Viktor Hovland(W) +3
+-1 (F)</td>
+      <td>Jon Rahm +4
++2 thru 11</td>
+      <td>Patrick Reed +4
++1 thru 16</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
