--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:09:49 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:10:32 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -204,6 +204,22 @@ E thru 1</td>
 +2 thru 11</td>
     </tr>
     <tr>
+      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">-3</td>
+      <td>Justin Thomas -2
+-1 thru 6</td>
+      <td>Cameron Smith -2
+E thru 4</td>
+      <td>Joaquin Niemann E
++1 thru 6</td>
+      <td>Tommy Fleetwood(W) +1
+-2 thru 17</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout">Rory McIlroy +3
++1 thru 12</td>
+    </tr>
+    <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith(W) -2
@@ -218,22 +234,6 @@ E thru 4</td>
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-2</td>
-      <td>Justin Thomas -2
--1 thru 6</td>
-      <td>Cameron Smith -2
-E thru 4</td>
-      <td>Tommy Fleetwood(W) +1
--2 thru 17</td>
-      <td>Joaquin Niemann +1
-+2 thru 5</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout">Rory McIlroy +3
-+1 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
@@ -316,22 +316,6 @@ E thru 4</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">9</td>
-      <td>Collin Morikawa -1
-E thru 4</td>
-      <td>Viktor Hovland(W) +3
--1 (F)</td>
-      <td>Patrick Reed +3
-E thru 15</td>
-      <td>Jon Rahm +4
-+2 thru 11</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Luke List
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">9</td>
       <td>Dustin Johnson -3
@@ -345,6 +329,22 @@ Missed Cut</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">10</td>
+      <td>Collin Morikawa -1
+E thru 4</td>
+      <td>Viktor Hovland(W) +3
+-1 (F)</td>
+      <td>Jon Rahm +4
++2 thru 11</td>
+      <td>Patrick Reed +4
++1 thru 16</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Luke List
 Missed Cut</td>
     </tr>
     <tr>
