--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:11:58 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:12:41 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,11 +141,11 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-15</td>
+      <td class="bigbold">-16</td>
       <td>Scottie Scheffler -8
 E thru 1</td>
-      <td>Shane Lowry -3
-E thru 1</td>
+      <td>Shane Lowry -4
+-1 thru 2</td>
       <td>Justin Thomas(W) -2
 -1 thru 6</td>
       <td>Will Zalatoris -2
@@ -157,11 +157,11 @@ E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-11</td>
+      <td class="bigbold">-12</td>
       <td>Scottie Scheffler(W) -8
 E thru 1</td>
-      <td>Shane Lowry -3
-E thru 1</td>
+      <td>Shane Lowry -4
+-1 thru 2</td>
       <td>Will Zalatoris -2
 -1 thru 5</td>
       <td>Jon Rahm +4
@@ -173,9 +173,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-9</td>
-      <td>Shane Lowry -3
-E thru 1</td>
+      <td class="bigbold">-10</td>
+      <td>Shane Lowry -4
+-1 thru 2</td>
       <td>Justin Thomas(W) -2
 -1 thru 6</td>
       <td>Cameron Smith -2
@@ -189,9 +189,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-4</td>
-      <td>Shane Lowry -3
-E thru 1</td>
+      <td class="bigbold">-5</td>
+      <td>Shane Lowry -4
+-1 thru 2</td>
       <td>Justin Thomas(W) -2
 -1 thru 6</td>
       <td>Corey Conners -2
@@ -201,7 +201,7 @@ E thru 1</td>
       <td class="greyout leftborder">Jon Rahm +4
 +2 thru 11</td>
       <td class="greyout">Tyrrell Hatton +4
-+2 thru 11</td>
++2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -309,7 +309,7 @@ Missed Cut</td>
       <td>Jon Rahm +4
 +2 thru 11</td>
       <td>Robert MacIntyre +4
-+2 thru 9</td>
++2 thru 10</td>
       <td class="greyout leftborder">Daniel Berger +5
 +3 thru 14</td>
       <td class="greyout">Jordan Spieth
