--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:19:08 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:19:51 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,15 +141,15 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-16</td>
+      <td class="bigbold">-15</td>
       <td>Scottie Scheffler -8
 E thru 1</td>
       <td>Shane Lowry -4
 -1 thru 2</td>
       <td>Justin Thomas(W) -2
 -1 thru 7</td>
-      <td>Will Zalatoris -2
--1 thru 5</td>
+      <td>Will Zalatoris -1
+E thru 6</td>
       <td class="greyout leftborder">Patrick Cantlay +3
 +2 thru 9</td>
       <td class="greyout">Tony Finau +5
@@ -157,13 +157,13 @@ E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-12</td>
+      <td class="bigbold">-11</td>
       <td>Scottie Scheffler(W) -8
 E thru 1</td>
       <td>Shane Lowry -4
 -1 thru 2</td>
-      <td>Will Zalatoris -2
--1 thru 5</td>
+      <td>Will Zalatoris -1
+E thru 6</td>
       <td>Jon Rahm +4
 +2 thru 12</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -173,15 +173,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-10</td>
+      <td class="bigbold">-9</td>
       <td>Shane Lowry -4
 -1 thru 2</td>
       <td>Justin Thomas(W) -2
 -1 thru 7</td>
       <td>Cameron Smith -2
 E thru 4</td>
-      <td>Will Zalatoris -2
--1 thru 5</td>
+      <td>Will Zalatoris -1
+E thru 6</td>
       <td class="greyout leftborder">Matthew Fitzpatrick E
 E thru 8</td>
       <td class="greyout">Brooks Koepka
@@ -214,10 +214,10 @@ E thru 4</td>
 +1 thru 6</td>
       <td>Tommy Fleetwood(W) +1
 -2 (F)</td>
-      <td class="greyout leftborder">Viktor Hovland +3
+      <td class="greyout leftborder">Rory McIlroy +2
+E thru 13</td>
+      <td class="greyout">Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout">Rory McIlroy +3
-+1 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -269,11 +269,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">2</td>
       <td>Justin Thomas(W) -2
 -1 thru 7</td>
-      <td>Will Zalatoris -2
--1 thru 5</td>
+      <td>Will Zalatoris -1
+E thru 6</td>
       <td>Collin Morikawa E
 +1 thru 5</td>
       <td>Tony Finau +5
@@ -285,13 +285,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">3</td>
       <td>Cameron Smith(W) -2
 E thru 4</td>
       <td>Collin Morikawa E
 +1 thru 5</td>
-      <td>Rory McIlroy +3
-+1 thru 12</td>
+      <td>Rory McIlroy +2
+E thru 13</td>
       <td>Patrick Cantlay +3
 +2 thru 9</td>
       <td class="greyout leftborder">Brooks Koepka
