--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:20:34 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:21:17 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,9 +141,9 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-15</td>
-      <td>Scottie Scheffler -8
-E thru 1</td>
+      <td class="bigbold">-16</td>
+      <td>Scottie Scheffler -9
+-1 thru 2</td>
       <td>Shane Lowry -4
 -1 thru 2</td>
       <td>Justin Thomas(W) -2
@@ -157,9 +157,9 @@ E thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-11</td>
-      <td>Scottie Scheffler(W) -8
-E thru 1</td>
+      <td class="bigbold">-12</td>
+      <td>Scottie Scheffler(W) -9
+-1 thru 2</td>
       <td>Shane Lowry -4
 -1 thru 2</td>
       <td>Will Zalatoris -1
