--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:21:17 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:22:00 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -189,13 +189,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-5</td>
+      <td class="bigbold">-4</td>
       <td>Shane Lowry -4
 -1 thru 2</td>
       <td>Justin Thomas(W) -2
 -1 thru 7</td>
-      <td>Corey Conners -2
--1 thru 4</td>
+      <td>Corey Conners -1
+E thru 5</td>
       <td>Patrick Cantlay +3
 +2 thru 9</td>
       <td class="greyout leftborder">Jon Rahm +4
@@ -221,13 +221,13 @@ E thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-3</td>
+      <td class="bigbold">-2</td>
       <td>Cameron Smith(W) -2
 E thru 5</td>
-      <td>Corey Conners -2
--1 thru 4</td>
       <td>Justin Thomas -2
 -1 thru 7</td>
+      <td>Corey Conners -1
+E thru 5</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -252,22 +252,6 @@ E thru 6</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">1</td>
-      <td>Dustin Johnson -3
--1 thru 4</td>
-      <td>Justin Thomas -2
--1 thru 7</td>
-      <td>Corey Conners -2
--1 thru 4</td>
-      <td>Russell Henley +6
-+3 thru 16</td>
-      <td class="greyout leftborder">Xander Schauffele(W)
-Missed Cut</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">1</td>
       <td>Justin Thomas(W) -2
@@ -281,6 +265,22 @@ E thru 6</td>
       <td class="greyout leftborder">Daniel Berger +5
 +3 thru 14</td>
       <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jamie Watters</td>
+      <td class="bigbold">2</td>
+      <td>Dustin Johnson -3
+-1 thru 4</td>
+      <td>Justin Thomas -2
+-1 thru 7</td>
+      <td>Corey Conners -1
+E thru 5</td>
+      <td>Russell Henley +6
++3 thru 16</td>
+      <td class="greyout leftborder">Xander Schauffele(W)
+Missed Cut</td>
+      <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
     <tr>
@@ -301,9 +301,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">5</td>
-      <td>Corey Conners(W) -2
--1 thru 4</td>
+      <td class="bigbold">6</td>
+      <td>Corey Conners(W) -1
+E thru 5</td>
       <td>Collin Morikawa -1
 E thru 6</td>
       <td>Jon Rahm +4
@@ -341,7 +341,7 @@ E thru 6</td>
       <td>Jon Rahm +4
 +2 thru 12</td>
       <td>Patrick Reed +4
-+1 thru 16</td>
++1 thru 17</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Luke List
